# fundamental-programming

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  go.work  go.work.sum  main.cpp  settings.gradle  sonar-project.properties
.github/: dependabot.yml
.github/workflows/: build.yml  clang-format-check.yml  clojure-build.yml  clojure-linter.yml  codacy-analysis.yml  cpp-build.yml  cpp-linter.yml  dependa-bot.yml  go-build.yml  go-lint.yml  java-build.yml  java-linter.yml  js-build.yml  js-lint.yml  sonar-scanner.yml  swift-build.yml  swift-linter.yml
.lsp/.cache/: db.transit.json
.scannerwork/: report-task.txt
C++/: .clang-format-ignore  CMakeCache.txt  CMakeLists.txt  a.out  condition.cpp  condition.h  dataType.cpp  loop  loop.cpp  main.cpp
C++/operator/: CMakeLists.txt  arithmetic.cpp  assignment.cpp  comparison.cpp  logical.cpp
Clojure/: condition.clj  loop.clj  project.clj  tempCodeRunnerFile.clj
Clojure/operator/: arithmetic.clj  assignment.clj  comparison.clj
Go/: go.mod  go.sum  looping.go  main.go  primitive.go
Go/condition/: condition.go  condition_test.go
Go/loop/: looping.go
Go/operator/: main.go
Go/primitivedatatype/: primitive.go
Java/: Main.java  dataType.java  loop.java  looping.java
Java/condition/: condition.java  condition_test.java
Java/loop/: Looping.java
Java/operator/: arithmetic.java  assignment.java  compare.java  logic.java
Java/primitivetype/: DataType.java
JavaScript/: condition.js  loop.js  main.js  package-lock.json  package.json
JavaScript/operator/: arithmetic.js  assignment.js  comparison.js  logic.js  main.js
Swift/: .gitignore  .swiftlint.yml  Package.swift  condition.swift  loop.swift
Swift/operator/: arithmetic.swift  assignment.swift  comparison.swift  logical.swift
app/: build.gradle
if-else/C++/: if-else.cpp
if-else/Java/: learnIf.java
loop/C++/: loop.cpp
loop/Clojure/: loop.clj
loop/Go/: main.go
loop/JavaScript/: loop.js
loop/Swift/: loop.swift
operator/C++/: arithmetic.cpp  comparison.cpp  main.cpp
operator/Clojure/: logic.clj
operator/Go/: main.go
(+36 files in other folders)
